# rosbag_exchange

./: CMakeLists.txt  README.md  package.xml
launch/: vins.launch
src/: rosbag_reader_node.cpp  rosbag_writer_node.cpp
